@@ -1,6 +1,8 @@
 2008-01-14  Martin Lambers <marlam@marlam.de>
 
 	* src/tonemap_selector.cpp: Tune default values for reinhard05 method.
+	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
+	Add support for the reinhard02 method.
 
 2008-01-13  Martin Lambers <marlam@marlam.de>
 
